<resources>
    <string name="desarrollo">App desarrollada en la asignatura Dirección y Gestión de Proyectos, en la ETSIIT de la Universidad de Granada por el equipo BlueDot y en prácticas de empresa en CITIC-UGR por Ismael Moyano y Manuel Ariza tutorados por Belén Prados y Maria José Rodríguez Fórtiz del departamento LSI</string>
    <string name="app_name">Vale</string>
    <string name="loginuser">Nombre de usuario</string>
    <string name="loginpass">Contraseña</string>
    <string name="loginbutton">Entrar</string>
    <string name="txtactividades">ACTIVIDADES</string>
    <string name="txtsugerencias">QUIERO HACER...</string>
    <string name="txtmisActividades">MIS ACTIVIDADES</string>
    <string name="txtperfil">PERFIL</string>
    <string name="txttodaslasactividades">TODAS LAS ACTIVIDADES</string>
    <string name="button_historial_actividades">Mis actividades</string>
    <string name="info">Aplicación desarrollada por BlueDot en la universidad de Granada para la asociación Vale</string>
    <string name="version">Versión 2.1</string>
    <string name="passlogin">Contraseña</string>
    <string name="title_activity_peticiones">Peticiones</string>
    <string name="titulochat">CHAT</string>
    <string name="titulosalir">SALIR</string>
    <string name="agregarnueva">AÑADIR ACTIVIDAD</string>
    <string name="listaautorizaciones">LISTA DE AUTORIZACIONES</string>
    <string name="Agregar_peticiones">AÑADIR PETICION</string>
    <string name="ListaPeticiones">LISTA DE PETICIONES</string>
    <string name="jugador">Jugador de fútbol</string>
    <string name="juegomesa">Mujer bailando flamenco</string>
    <string name="playa">Persona surfeando</string>
    <string name="flamenco">Hombre esquiando</string>
    <string name="paseocaballo">Paseo a caballo</string>
    <string name="corriendo">Personas en un cine</string>
    <string name="borrar">BORRAR</string>
    <string name="datosadicionales">DATOS ADICIONALES</string>
    <string name="correo">CORREO ELECTRÓNICO</string>
    <string name="volver">VOLVER ATRÁS</string>
    <string name="title_activity_debuglogin">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción de la actividad</string>
    <string name="hora">Hora</string>
    <string name="Fecha">Fecha</string>
    <string name="Precio">Precio</string>
    <string name="reservar">Reservar</string>
    <string name="elegirimg">Elegir imagen</string>
    <string name="Siguiente">Siguiente</string>
    <string name="elegirfecha">Elegir fecha</string>
    <string name="Plazas">Plazas</string>
    <string name="Enviar">Enviar</string>
    <string name="numsocios">Socios</string>
    <string name="numvoluntarios">Voluntarios</string>
    <string name="autorizacion">¿Requiere autorización?</string>
    <string name="nombre">Nombre</string>
    <string name="preferencias">Preferencias y gustos</string>
    <string name="adicionales">Datos adicionales</string>
    <string name="contactoemergencia">Contacto de emergencia</string>
    <string name="mensaje">Mensaje</string>
    <string name="descripcionpeticion">Descripción de la petición</string>
    <string name="casa">Volver al menú principal</string>

</resources>
