<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blancoroto"
    tools:context=".AgregarPeticion"
    android:screenOrientation="portrait">

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:contentDescription="@string/volver"
            android:onClick="volver"
            app:srcCompat="@drawable/atras" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/sendpet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtactividades2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#009688"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingStart="5dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:text="¿Qué quieres hacer?"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/titulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:hint="@string/titulo"
                        android:maxLength="40"
                        android:paddingStart="5dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:textSize="24sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <EditText
                        android:id="@+id/descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/descripcion"
                        android:inputType="textMultiLine"
                        android:maxLength="500"
                        android:paddingStart="5dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:textSize="24sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/sendpet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/estiloboton"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="enviar"
        android:text="@string/Enviar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>