<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Submenu_Actividades">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:contentDescription="@string/volver"
            android:onClick="volver"
            app:srcCompat="@drawable/atras" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearActividades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imbactividades"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:backgroundTint="#3F51B5"
                    android:contentDescription="TODAS LAS ACTIVIDADES"
                    android:onClick="irListaActividades"
                    android:src="@drawable/actividades_y_fiestas"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:onClick="irListaActividades"
                    android:text="@string/txttodaslasactividades"
                    android:textAlignment="center"
                    android:textColor="#3F51B5"
                    android:textSize="24sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/LinearMisActividades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/todaslasactividades"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:backgroundTint="#3F51B5"
                    android:contentDescription="PETICIONES"
                    android:onClick="irPeticiones"
                    android:src="@drawable/tenerunaidea"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="3dp" />

                <TextView
                    android:id="@+id/txtmisactividades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:onClick="irPeticiones"
                    android:text="PETICIONES"
                    android:textAlignment="center"
                    android:textColor="#3F51B5"
                    android:textSize="24sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/LinearSugerencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/sugerencias"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:backgroundTint="#3F51B5"
                    android:contentDescription="MIS ACTIVIDADES"
                    android:onClick="cambiarMisActividades"
                    android:src="@drawable/mio"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="3dp" />

                <TextView
                    android:id="@+id/txtsugerencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:onClick="cambiarMisActividades"
                    android:text="@string/txtmisActividades"
                    android:textAlignment="center"
                    android:textColor="#3F51B5"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>